be-role-based-control-impl

--- a/pom.xml
+++ b/pom.xml
@@ -59,10 +59,11 @@
     </dependency>
 
     <!-- Other dependencies: -->
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <scope>runtime</scope>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.29</version>
     </dependency>
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
@@ -134,6 +135,11 @@
       <groupId>org.openapitools</groupId>
       <artifactId>jackson-databind-nullable</artifactId>
       <version>0.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.errorprone</groupId>
+      <artifactId>error_prone_annotations</artifactId>
+      <version>2.0.15</version>
     </dependency>
     <!-- Bean Validation API support -->
     <dependency>
