--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=
 spring.datasource.url=jdbc:mysql://localhost:3306/realworld
 #TODO need to store credential in param store
 spring.datasource.username=root
